# testtask

./: analyse.ipynb  pyproject.toml
